--- a/src/main.scss
+++ b/src/main.scss
@@ -17,6 +17,10 @@ body{
     background-color: #ffff;
     box-shadow: 0px 3px 6px 0px rgba(239,244,253,1);
     color: #5B6270;
+    transition: 0.3s ease-in-out;
+    &:hover{
+    box-shadow: 0px 3px 20px 0px rgba(239,244,253,1);
+    }
 }
 .users{
     padding: 10px 150px;
@@ -28,4 +32,13 @@ body{
     border: none;
     outline: none;
     padding: 0px 20px;
+}
+.profile{
+    img{
+        width: 38px;
+        border-radius: 50px;
+    }
+    p{
+        font-weight: 500;
+    }
 }
