--- a/src/main.scss
+++ b/src/main.scss
@@ -42,3 +42,22 @@ body{
         font-weight: 500;
     }
 }
+.submit-btn{
+    width: 254px;
+    background-color: #000;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 14px;
+    padding: 10px 0px;
+    outline: none;
+    border: none;
+    transition: 0.3s ease-in;
+    &:hover{
+    box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.2);
+    }
+}
+footer{
+    position: absolute;
+    bottom: 0;
+    margin: 20px 400px;
+}
