--- a/src/main.scss
+++ b/src/main.scss
@@ -56,8 +56,8 @@ body{
     box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.2);
     }
 }
-footer{
+/*footer{
     position: absolute;
     bottom: 0;
     margin: 20px 400px;
-}
+}*/
