--- a/src/main.scss
+++ b/src/main.scss
@@ -9,9 +9,10 @@ body{
     }
 }
 .user-search{
-    box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.05);
-    border-radius: 14px;
+    width: 100%;
+    padding: 10px;
     outline: none;
+    border: none;
 }
 .user-item{
     background-color: #ffff;
@@ -55,4 +56,22 @@ body{
     &:hover{
     box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.2);
     }
+}
+.search-container{
+    display: flex;
+  width: 100%;
+  margin-bottom: 15px;
+  box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.05);
+  border-radius: 14px;
+  outline: none;
+  padding: 5px 15px;
+}
+.icon{
+    padding: 10px;
+    color: black;
+    min-width: 50px;
+    text-align: center;
+}
+.btn{
+    outline: none;
 }
