--- a/src/main.scss
+++ b/src/main.scss
@@ -75,3 +75,29 @@ body{
 .btn{
     outline: none;
 }
+.header-box{
+    border: 1px solid #EFF4FD;
+    border-radius: 14px;
+    .profile-img{
+        width: 149px;
+        box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
+    }
+    .bio{
+        h2{
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
+        }
+        h3{
+            font-family: 'Montserrat', sans-serif;
+        }
+    }
+    .contact{
+        p{
+            font-size: 16px;
+        }
+        .contact-ico{
+            color: #377DFF;
+            vertical-align: center;
+        }
+    }
+}
